# skynet

./: .gitignore  CMakeLists.txt
base/raft/: raft_private.h  raft_server.c
docs/: skynet_raft.md
etc/: zlog.ini
scripts/: build_deps.sh
skynet/: args.c  args.h  functor.c  functor.h  logger.h  main.c  serializer.c  serializer.h  transport.c  transport.h
